Remove java extra flags